General bug fixing and refactoring
* Removed debugging println() from FilterChain
* Switched Logic’s dependency on Storage from injecting when readTask()
is called to injecting together in injectDependencies(). Note that any
actions that rely on dependency must come after the dependencies have
been injected.
* Changed the way date time is parsed in Parser component. parseDate()
now produces a string of the format dd_MM_yyyy_HH_mm where specified
fields are replaced with actual values. The resulting string can then
be fed into a SimpleDateFormat object to parse and format Date objects
specific to that user input date time
* Added new tests for all permutations of date and time for parseDate()
* Ran formatter on Storage component and changed logging messages to
use java Logger
* Changed the way setStart(String) and setEnd(String) method works in
Task class. They now take in a string of format dd_MM_yyyy_HH_mm and
creates a new SimpleDateFormat object with it. It will then parse
either the current time (if START/END is null) or the existing
start/end time and obtain a new Date object with specific fields updated
* Closes #123